<resources>
    <string name="app_name">Hostel Finder Android App</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_provider_drawer_main">ProviderDrawerMainActivity</string>
    <string name="title_activity_admin_drawer_main">AdminDrawerMainActivity</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="facebook_app_id">2534582863459183</string>
    <string name="facebook_application_id">2534582863459183</string>
    <string name="fb_login_protocol_scheme">fb2534582863459183</string>

    <string name="google_maps_key">AIzaSyAGomIGYawWMiJ-WzSil35AXgBECV2LJZY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="become_hostel_owner">Become Hostel Owner</string>
    <string name="logout">Logout</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_hostels">Hostels</string>
    <string name="menu_users_and_admins">Users And Admins</string>
    <string name="menu_owners">Owners</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_my_hostels">My Hostels</string>
    <string name="menu_add_hostel">Add Hostel</string>

    <string name="about_us_1">Hostel finder is community platform that provides available hostels in a single platform. User can see all the features of selected hostel. We provided locations of hostels too which make it easy to find them. A hostel owner will also advertise his hostel to connect with the community.</string>
    <string name="about_us_2">Hostel finder is the solution that let you find an economical accommodations with most facilities. For our users, we let you save your precious time and finds right hostel for your stay. Our users can book the suitable hostel they find, from any where. </string>
</resources>
