<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_hostels"
            android:icon="@drawable/hostal"
            android:title="@string/menu_hostels" />
        <item
            android:id="@+id/nav_users_admins_list"
            android:icon="@drawable/admin_user"
            android:title="@string/menu_users_and_admins" />
        <item
            android:id="@+id/nav_owners"
            android:icon="@drawable/owner"
            android:title="@string/menu_owners" />

        <item
            android:id="@+id/nav_my_bookings"
            android:icon="@drawable/ic_bookings"
            android:title="@string/menu_bookings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/contect_us"
                android:title="@string/menu_contact_us" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about_us"
                android:title="@string/menu_about_us" />
        </menu>
    </item>

</menu>
