<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_becomeHostelOwner"
            android:icon="@drawable/hostal_owner"
            android:title="@string/become_hostel_owner" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/contect_us"
                android:title="Contect Us" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/about_us"
                android:title="About Us" />
        </menu>
    </item>

</menu>
